# GeoBuildBench

./: .env.example  .gitignore  README.md  pyproject.toml  run_agent_benchmark.py
data/: geoqa3_dataset_en_retranslated.json
src/agent/: react_agent.py
src/interfaces/: multimodal_interface.py
src/parser/: problem_parser.py
