[project]
name = "pyggb"
version = "0.1.0"
description = "Python Geometry Problem Solving with GeoGebra DSL"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "openai>=2.9.0",
    "python-dotenv",
    "google-genai>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]


